@@ -109,16 +109,16 @@ _simuPOP_laop.so: $(OBJS) utility_laop.o simuPOP_laop_wrap.o $(PY_FILES)
 	time $(LINK) -shared  $(OBJS) utility_laop.o  simuPOP_laop_wrap.o $(LIBS) -o _simuPOP_laop.so
 
 simuPOP_std_wrap.o: simuPOP_std_wrap.cpp arraymodule.c
-	$(CXX) $(INCLUDES) $(DEF) $(UDEF) $(CFLAGS) -c $<
+	$(CXX) $(INCLUDES) -DSIMUPOP_MODULE=simuPOP_std $(DEF) $(UDEF) $(CFLAGS) -c $<
 
 simuPOP_op_wrap.o: simuPOP_op_wrap.cpp arraymodule.c
-	$(CXX) $(INCLUDES) $(DEF) -DOPTIMIZED $(UDEF) $(CFLAGS) -c $<
+	$(CXX) $(INCLUDES)  -DSIMUPOP_MODULE=simuPOP_op $(DEF) -DOPTIMIZED $(UDEF) $(CFLAGS) -c $<
 
 simuPOP_la_wrap.o: simuPOP_la_wrap.cpp arraymodule.c
-	$(CXX) $(INCLUDES) $(DEF) -DLONGALLELE $(UDEF) $(CFLAGS) -c $<
+	$(CXX) $(INCLUDES)  -DSIMUPOP_MODULE=simuPOP_la $(DEF) -DLONGALLELE $(UDEF) $(CFLAGS) -c $<
 
 simuPOP_laop_wrap.o: simuPOP_laop_wrap.cpp arraymodule.c
-	$(CXX) $(INCLUDES) $(DEF) -DOPTIMIZED -DLONGALLELE $(UDEF) $(CFLAGS) -c $<
+	$(CXX) $(INCLUDES)  -DSIMUPOP_MODULE=simuPOP_laop $(DEF) -DOPTIMIZED -DLONGALLELE $(UDEF) $(CFLAGS) -c $<
 
 simuPOP_std_wrap.cpp: simuPOP_std.i simuPOP_common.i $(HEADFILES)
 	$(SWIG) $(DEF) -shadow -c++ -python -o simuPOP_std_wrap.cpp simuPOP_std.i
@@ -137,16 +137,16 @@ simuPOP_laop_wrap.cpp: simuPOP_laop.i simuPOP_common.i $(HEADFILES)
 	perl -pi.bak -e 's/static PyMethodDef SwigMethods\[\] = \{/static PyMethodDef SwigMethods[] = {\n  {"carray", a_array, METH_VARARGS, a_array_doc}, \/* added by Bo Peng *\//' simuPOP_laop_wrap.cpp
 
 utility_std.o: utility.h utility_std.cpp simupop_cfg.h
-	$(CXX) $(INCLUDES) $(DEF) $(UDEF) $(CFLAGS) -c utility_std.cpp -o utility_std.o
+	$(CXX) $(INCLUDES) -DSIMUPOP_MODULE=\"simuPOP_std\" $(DEF) $(UDEF) $(CFLAGS) -c utility_std.cpp -o utility_std.o
 
 utility_op.o: utility.h utility_op.cpp simupop_cfg.h
-	$(CXX) $(INCLUDES) -DOPTIMIZED $(DEF) $(UDEF) $(CFLAGS) -c utility_op.cpp -o utility_op.o
+	$(CXX) $(INCLUDES) -DSIMUPOP_MODULE=\"simuPOP_op\" -DOPTIMIZED $(DEF) $(UDEF) $(CFLAGS) -c utility_op.cpp -o utility_op.o
 
 utility_la.o: utility.h utility_la.cpp simupop_cfg.h
-	$(CXX) $(INCLUDES) -DLONGALLELE $(DEF) $(UDEF) $(CFLAGS) -c utility_la.cpp -o utility_la.o
+	$(CXX) $(INCLUDES) -DSIMUPOP_MODULE=\"simuPOP_la\" -DLONGALLELE $(DEF) $(UDEF) $(CFLAGS) -c utility_la.cpp -o utility_la.o
 
 utility_laop.o: utility.h utility_laop.cpp simupop_cfg.h
-	$(CXX) $(INCLUDES) -DOPTIMIZED -DLONGALLELE $(DEF) $(UDEF) $(CFLAGS) -c utility_laop.cpp -o utility_laop.o
+	$(CXX) $(INCLUDES) -DSIMUPOP_MODULE=\"simuPOP_laop\" -DOPTIMIZED -DLONGALLELE $(DEF) $(UDEF) $(CFLAGS) -c utility_laop.cpp -o utility_laop.o
 
 utility_std.cpp: utility.cpp
 	cp -f utility.cpp utility_std.cpp
